--- a/requirements.txt
+++ b/requirements.txt
@@ -1,93 +1,132 @@
-altair==4.2.0
-argon2-cffi==21.3.0
-argon2-cffi-bindings==21.2.0
+advertools==0.11.1
+altair==4.1.0
+argon2-cffi==21.1.0
 astor==0.8.1
-attrs==21.4.0
+attrs==21.2.0
+Automat==20.2.0
 backcall==0.2.0
 base58==2.1.1
 bleach==4.1.0
 blinker==1.4
-cachetools==5.0.0
-certifi==2021.10.8
-cffi==1.15.0
-charset-normalizer==2.0.9
+boto3==1.18.56
+botocore==1.21.56
+cachetools==4.2.4
+calplot==0.1.7.3
+certifi==2021.5.30
+cffi==1.14.6
+charset-normalizer==2.0.4
 click==7.1.2
 colorama==0.4.4
 commonmark==0.9.1
-cycler==0.11.0
+constantly==15.1.0
+cryptography==3.4.8
+cssselect==1.1.0
+cycler==0.10.0
 debugpy==1.5.1
 decorator==5.1.0
 defusedxml==0.7.1
 entrypoints==0.3
-fonttools==4.28.5
 gitdb==4.0.9
 GitPython==3.1.24
-idna==3.3
-ipykernel==6.6.0
-ipython==7.30.1
+h2==3.2.0
+hpack==3.0.0
+hyperframe==5.2.0
+hyperlink==21.0.0
+idna==3.2
+incremental==21.3.0
+ipykernel==6.5.1
+ipython==7.29.0
 ipython-genutils==0.2.0
 ipywidgets==7.6.5
+itemadapter==0.3.0
+itemloaders==1.0.4
 jedi==0.18.1
 Jinja2==3.0.3
-jsonschema==4.3.2
+jmespath==0.10.0
+joblib==1.0.1
+jsonschema==4.2.1
 jupyter-client==7.1.0
 jupyter-core==4.9.1
 jupyterlab-pygments==0.1.2
 jupyterlab-widgets==1.0.2
-kiwisolver==1.3.2
+kiwisolver==1.3.1
+lxml==4.6.3
 MarkupSafe==2.0.1
-matplotlib==3.5.1
+matplotlib==3.3.4
 matplotlib-inline==0.1.3
 mistune==0.8.4
 nbclient==0.5.9
 nbconvert==6.3.0
 nbformat==5.1.3
-nest-asyncio==1.5.4
+nest-asyncio==1.5.1
+nltk==3.6.2
 notebook==6.4.6
-numpy==1.21.4
+numpy==1.20.1
+oauthlib==3.1.1
 packaging==21.3
-pandas==1.3.5
+pandas==1.2.2
 pandocfilters==1.5.0
-parso==0.8.3
+parsel==1.6.0
+parso==0.8.2
 pexpect==4.8.0
 pickleshare==0.7.5
-Pillow==8.4.0
+Pillow==8.1.0
+priority==1.3.0
 prometheus-client==0.12.0
-prompt-toolkit==3.0.24
+prompt-toolkit==3.0.22
+Protego==0.1.16
 protobuf==3.19.1
 ptyprocess==0.7.0
 pyarrow==6.0.1
-pycparser==2.21
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycld2==0.41
+pycparser==2.20
 pydeck==0.7.1
+PyDispatcher==2.0.5
 Pygments==2.8.0
-Pympler==1.0.1
-pyparsing==3.0.6
+Pympler==0.9
+PyMySQL==1.0.2
+pyOpenSSL==20.0.1
+pyparsing==2.4.7
 pyrsistent==0.18.0
-python-dateutil==2.8.2
+python-dateutil==2.8.1
 python-dotenv==0.15.0
-pytz==2021.3
+pytz==2021.1
 pytz-deprecation-shim==0.1.0.post0
 pyzmq==22.3.0
+queuelib==1.6.1
+regex==2021.8.21
 requests==2.26.0
+requests-oauthlib==1.3.0
 rich==9.12.0
-scipy==1.7.3
+s3transfer==0.5.0
+scipy==1.7.1
+Scrapy==2.5.0
 seaborn==0.11.2
 Send2Trash==1.8.0
-six==1.16.0
+service-identity==21.1.0
+six==1.15.0
 smmap==5.0.0
-streamlit==1.3.1
+streamlit==1.2.0
 terminado==0.12.1
 testpath==0.5.0
+textblob==0.15.3
 toml==0.10.2
 toolz==0.11.2
 tornado==6.1
+tqdm==4.62.2
 traitlets==5.1.1
+Twisted==21.7.0
+twython==3.9.1
 typing-extensions==3.7.4.3
 tzdata==2021.5
 tzlocal==4.1
-urllib3==1.26.7
+urllib3==1.26.6
 validators==0.18.2
+w3lib==1.22.0
 watchdog==2.1.6
 wcwidth==0.2.5
 webencodings==0.5.1
 widgetsnbextension==3.5.2
+zope.interface==5.4.0
